<resources>
    <string name="app_name" translatable="false">NextTransit</string>
    <string name="update_destination">Update Destination</string>
    <string name="action_settings">Settings</string>
    <string name="destination_name">Name</string>
    <string name="destination_address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update destination</string>
    <string name="no_destinations_added">No destinations</string>
    <string name="add_destination_with_button">Add a new destination to get departure times from your current location.</string>

    <string name="action_feedback">Send feedback</string>
    <string name="action_about">About</string>
    <string name="about">About</string>
    <string name="download_primetime_play_store">Download PrimeTime on the Play Store. It’s free.</string>
    <string name="get_it_now">Get it now ❯</string>
    <string name="error">Error</string>
    <string name="at_stop_name">%1$s at %2$s</string>
    <!--<string name="arrives_at">Arrives at %1$s at %2$s</string>-->
    <string name="arrives_at">Arrives at %s</string>
    <string name="no_location_access_text">Without it, NextTransit can’t access your current location and provide departure times.</string>
    <string name="no_location_access_header">Enable location access</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="navigate_to_departure_stop">Navigate to departure stop</string>
    <string name="remove_destination">Remove %s?</string>
    <string name="removed_destination">Removed %s</string>

    <string name="title_activity_introduction" translatable="false">IntroductionActivity</string>

    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="introduction_header">Welcome to NextTransit</string>
    <string name="introduction_text">To get started, you must grant NextTransit access to your location.</string>
    <string name="allow_location_access">Allow location access</string>
    <string name="minutes_to_departure">%d mins</string>
    <string name="no_route_found">No route found</string>
    <string name="could_not_find_location">NextTransit couldn’t find your current location.</string>
    <string name="try_again">Try again</string>
    <string name="about_thank_you">Thanks for downloading! You’re awesome!</string>
    <string name="version">NextTransit %s</string>
    <string name="app_icon">App icon</string>
    <string name="why">Why?</string>
    <string name="ok">OK</string>
    <string name="why_location_access">Why location access?</string>
    <string name="why_location_access_explanation">NextTransit uses your location to find transit stops near you and provide travel routes from there. If you don’t allow location access, NextTransit won’t be able to function properly.</string>
    <string name="created_in_munich">Created with ♥︎ in the beautiful city of Munich</string>
    <string name="thanks">Thanks!</string>
    <string name="show_complete_route">Show complete route</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="undo">Undo</string>
    <string name="about_color_header"><b>Colors</b></string>
    <string name="about_colorscheme">NextTransit displays color next to each destination. Here’s what they mean:</string>
    <string name="long_duration_description">Take your time. You have a solid buffer.</string>
    <string name="medium_duration_description">You should get ready soon.</string>
    <string name="short_duration_description">You need to leave <b>now</b>.</string>
    <string name="primetime_app_icon">PrimeTime app icon</string>
    <string name="meters">%d m</string>
    <string name="kilometers">%1$,.1f km</string>
    <string name="kilometers_rounded">%d km</string>

    <plurals name="minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <string name="hours">%1$s:%2$s hours</string>
    <string name="open_directions">Open directions</string>
    <string name="options">Options</string>
    <string name="access_background_image_of_map">Background image of a map of Munich, Germany</string>
    <string name="access_add_new_destination">Add new destination</string>
    <string name="access_list_item_descr_wout_info">Destination: %s. Next transit information is currently being downloaded. Double-tap and hold to edit, or remove.</string>
    <string name="access_list_item_descr_w_info">Destination: %1$s. Next transit in %2$s minutes from %3$s. Double-tap to open route. Double-tap and hold to edit, remove, or navigate to departure stop.</string>
    <string name="access_list_item_descr_error">Destination: %1$s. No route was found for this destination. Double-tap and hold to edit, or remove.</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="switch_dark_theme">Switch to dark theme at night</string>
    <string name="open_settings">Open settings</string>
    <string name="hours_to_departure">%1$s:%2$s</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Cancel</string>
    <string name="discard_alert_text">Discard your changes?</string>

    <string name="route_list_item_content_descr">Step %1$s: %2$s. Distance: %3$s. Duration: %4$s.</string>
    <string name="open_route">Open route</string>
    <string name="action_sort">Sort</string>
    <string name="done">Done</string>
    <string name="handle_reorder_destination">Handle to change destination position</string>
    <string name="access_list_item_descr_reorder">Destination: %s. Tap and hold the handle on the right to change its position.</string>
    <string name="access_icon_missing_location">Icon to indicate missing location</string>
    <string name="access_icon_placeholder_view">Icon for placeholder view</string>
    <string name="route_headsign">to %s</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="parents">Parents</string>
    <string name="school">School</string>
    <string name="university">University</string>
    <string name="loading_departure_time">Loading departure time …</string>
    <string name="next_event">Next event: %s</string>
    <string name="banner_body">%1$s at %2$s in %3$s</string>
    <string name="notification_title">Leave now for %s</string>
    <string name="notification_text">%1$s • %2$s at %3$s</string>
    <string name="notify_when_have_to_leave">Notify me when I have to leave</string>
    <string name="miles">%1$,.1f mi</string>
    <string name="better_hurry">You better hurry to make it in time.</string>
    <string name="add_destination">Add destination</string>
    <string name="calendar_promo_header">Allow calendar access</string>
    <string name="calendar_promo_text">Allow calendar access to get the departure times for your events.</string>
    <string name="reminders_channel_name">Reminders to leave</string>
    <string name="leave_now">Leave now</string>
    <string name="notify">Notify</string>
    <string name="notification_scheduled">Notification scheduled</string>
    <string name="got_it">Got it</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>
    <string name="remove_with_placeholder">Remove %s</string>
    <string name="introduction_header_image_credit" translatable="false"><![CDATA[Icon by <a href="https://www.flaticon.com/authors/smashicons">Smashicons</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>. Licensed by <a href="http://creativecommons.org/licenses/by/3.0/">CC 3.0 BY</a>.]]></string>
    <string name="notify_me">Notify me</string>
    <string name="allow">Allow</string>
    <string name="route">Route</string>
    <string name="enable">Enable</string>
    <string name="dismiss">Dismiss</string>
    <string name="show_route">Show route</string>
    <string name="route_transit_details">%1$s until %2$s</string>
    <string name="arrival_prediction">Arrives at %1$s at %2$s</string>
</resources>
