<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:clipChildren="false"
    tools:context=".ui.edit.EditDestinationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:clipChildren="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_default_padding"
                android:layout_marginTop="@dimen/material_large_padding"
                android:layout_marginEnd="@dimen/material_default_padding"
                android:focusableInTouchMode="true">

                <AutoCompleteTextView
                    android:id="@+id/titleInputView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/destination_name"
                    android:imeOptions="flagNoExtractUi"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/nameSuggestionChipsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="@dimen/material_default_padding"
                android:paddingEnd="@dimen/material_default_padding"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/nameSuggestionChips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacing="@dimen/material_small_padding"
                    app:singleLine="true"
                    app:singleSelection="true" />

            </HorizontalScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_default_padding"
                android:layout_marginTop="@dimen/material_default_padding"
                android:layout_marginEnd="@dimen/material_default_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/addressInputView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/destination_address"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textAutoComplete|textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/progressIndicator"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/material_default_padding"
                android:layout_marginTop="@dimen/material_default_padding"
                android:layout_marginEnd="@dimen/material_default_padding"
                android:layout_marginBottom="@dimen/material_default_padding"
                android:enabled="false"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="20dp"
                tools:enabled="true" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
